// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when isFree is false and there is a price range 1`] = `
<View
  style={
    Object {
      "borderRadius": 5,
      "flexDirection": "row",
      "height": 108,
      "overflow": "hidden",
    }
  }
>
  <ImageBackground
    resizeMode="cover"
    source={
      Object {
        "uri": "https://image.jpg",
      }
    }
    style={
      Object {
        "height": 108,
        "width": 114,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#2d2f7f",
          "height": 23,
          "justifyContent": "center",
          "paddingHorizontal": 5,
          "position": "absolute",
        }
      }
    >
      <Text
        color="whiteColor"
        markdown={false}
        type="price"
      >
        From £12
      </Text>
    </View>
  </ImageBackground>
  <View
    style={
      Object {
        "flex": 1,
        "paddingLeft": 8,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 0,
          "flexDirection": "column",
          "flexGrow": 1,
          "flexShrink": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 0,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 0,
              "flexDirection": "column",
              "flexGrow": 1,
              "flexShrink": 1,
            }
          }
        >
          <Text
            color="lightNavyBlueColor"
            markdown={false}
            style={
              Object {
                "paddingTop": 12,
              }
            }
            type="small"
          >
            12:12 - 13:12
          </Text>
          <Text
            color="lightNavyBlueColor"
            markdown={false}
            numberOfLines={2}
            style={
              Object {
                "paddingTop": 4,
              }
            }
            type="h3"
          >
            name
          </Text>
        </View>
        <View>
          <SaveEventButton
            active={false}
            onDark={false}
            onPress={[Function]}
          />
        </View>
      </View>
      <Text
        color="lightNavyBlueColor"
        markdown={false}
        type="small"
      >
        location
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders correctly when isFree is false and there's only one price 1`] = `
<View
  style={
    Object {
      "borderRadius": 5,
      "flexDirection": "row",
      "height": 108,
      "overflow": "hidden",
    }
  }
>
  <ImageBackground
    resizeMode="cover"
    source={
      Object {
        "uri": "https://image.jpg",
      }
    }
    style={
      Object {
        "height": 108,
        "width": 114,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#2d2f7f",
          "height": 23,
          "justifyContent": "center",
          "paddingHorizontal": 5,
          "position": "absolute",
        }
      }
    >
      <Text
        color="whiteColor"
        markdown={false}
        type="price"
      >
        £12
      </Text>
    </View>
  </ImageBackground>
  <View
    style={
      Object {
        "flex": 1,
        "paddingLeft": 8,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 0,
          "flexDirection": "column",
          "flexGrow": 1,
          "flexShrink": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 0,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 0,
              "flexDirection": "column",
              "flexGrow": 1,
              "flexShrink": 1,
            }
          }
        >
          <Text
            color="lightNavyBlueColor"
            markdown={false}
            style={
              Object {
                "paddingTop": 12,
              }
            }
            type="small"
          >
            12:12 - 13:12
          </Text>
          <Text
            color="lightNavyBlueColor"
            markdown={false}
            numberOfLines={2}
            style={
              Object {
                "paddingTop": 4,
              }
            }
            type="h3"
          >
            name
          </Text>
        </View>
        <View>
          <SaveEventButton
            active={false}
            onDark={false}
            onPress={[Function]}
          />
        </View>
      </View>
      <Text
        color="lightNavyBlueColor"
        markdown={false}
        type="small"
      >
        location
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders correctly when isFree is true 1`] = `
<View
  style={
    Object {
      "borderRadius": 5,
      "flexDirection": "row",
      "height": 108,
      "overflow": "hidden",
    }
  }
>
  <ImageBackground
    resizeMode="cover"
    source={
      Object {
        "uri": "https://image.jpg",
      }
    }
    style={
      Object {
        "height": 108,
        "width": 114,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#2d2f7f",
          "height": 23,
          "justifyContent": "center",
          "paddingHorizontal": 5,
          "position": "absolute",
        }
      }
    >
      <Text
        color="whiteColor"
        markdown={false}
        type="price"
      >
        Free
      </Text>
    </View>
  </ImageBackground>
  <View
    style={
      Object {
        "flex": 1,
        "paddingLeft": 8,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 0,
          "flexDirection": "column",
          "flexGrow": 1,
          "flexShrink": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 0,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 0,
              "flexDirection": "column",
              "flexGrow": 1,
              "flexShrink": 1,
            }
          }
        >
          <Text
            color="lightNavyBlueColor"
            markdown={false}
            style={
              Object {
                "paddingTop": 12,
              }
            }
            type="small"
          >
            12:12 - 13:12
          </Text>
          <Text
            color="lightNavyBlueColor"
            markdown={false}
            numberOfLines={2}
            style={
              Object {
                "paddingTop": 4,
              }
            }
            type="h3"
          >
            name
          </Text>
        </View>
        <View>
          <SaveEventButton
            active={false}
            onDark={false}
            onPress={[Function]}
          />
        </View>
      </View>
      <Text
        color="lightNavyBlueColor"
        markdown={false}
        type="small"
      >
        location
      </Text>
    </View>
  </View>
</View>
`;
